Implement ByteArrayToImageSourceConverter in converters. (#182)
* ByteArrayToImageSourceConverter implementation.

* Convert method changes.

* Convert back and tests changes.

* Update XamarinCommunityToolkit.UnitTests/Converters/ByteArrayToImageSourceConverter_Tests.cs

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Added null checks and other UI sample releated changes .

* Update XamarinCommunityToolkit/Converters/ByteArrayToImageSourceConverter.shared.cs

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

* Using System.Threading fix.

* Update XamarinCommunityToolkitSample/Resx/AppResources.resx

* Update XamarinCommunityToolkit/Converters/ByteArrayToImageSourceConverter.shared.cs

Co-authored-by: Andrei <andrei.misiukevich@gmail.com>

--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -171,6 +171,11 @@
               <value>A converter that allows you to extract the value from ItemSelectedEventArgs that can be used in combination with EventToCommandBehavior.</value>
           </data>
        
+         <!--ItemTappedSelectedEventArgs-->
+  
+         <data name="ByteArrayToImageSourceShortDescription" xml:space="preserve">
+              <value>A converter that allows you to convert byte array to an object of a type ImageSource.</value>
+         </data>
   <!--/Converters Section-->
   
   
