--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -355,9 +355,9 @@
     <value>Time</value>
   </data>
   <data name="UriValidationDescription" xml:space="preserve">
-    <value>This sample demonstrates how to use UriValidationBehavior to validate if a given Uri is absolute or relative.</value>
+    <value>Text color will change accordingly to the style that is configured when a invalid URI is entered.</value>
   </data>
   <data name="UriValidationShortDescription" xml:space="preserve">
-    <value>Behavior for validating Uris</value>
+    <value>Changes an Entry's text color when an invalid URI is provided.</value>
   </data>
 </root>
