--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -354,11 +354,11 @@
   <data name="Time" xml:space="preserve">
     <value>Time</value>
   </data>
-   <data name="UriValidationShortDescription" xml:space="preserve">
-    <value>Uri Validation</value>
+   <data name="UriValidationDescription" xml:space="preserve">
+    <value>Text color will change accordingly to the style that is configured when a invalid URI is entered.</value>
   </data>
-    <data name="UriValidationDescription" xml:space="preserve">
-    <value>Uri Validation</value>
+  <data name="UriValidationShortDescription" xml:space="preserve">
+    <value>Changes an Entry's text color when an invalid URI is provided.</value>
   </data>
    <data name="Settings" xml:space="preserve">
     <value>Settings</value>
