--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -354,4 +354,10 @@
   <data name="Time" xml:space="preserve">
     <value>Time</value>
   </data>
+  <data name="UriValidationDescription" xml:space="preserve">
+    <value>Text color will change accordingly to the style that is configured when a invalid URI is entered.</value>
+  </data>
+  <data name="UriValidationShortDescription" xml:space="preserve">
+    <value>Changes an Entry's text color when an invalid URI is provided.</value>
+  </data>
 </root>
