Minor .csproject clean up

--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -354,11 +354,19 @@
   <data name="Time" xml:space="preserve">
     <value>#Time</value>
   </data>
-    <data name="UriValidationShortDescription" xml:space="preserve">
-    <value>#Uri Validation</value>
+     <data name="UriValidationDescription" xml:space="preserve">
+    <value>#Text color will change accordingly to the style that is configured when a invalid URI is entered.</value>
   </data>
-    <data name="UriValidationDescription" xml:space="preserve">
-    <value>#Uri Validation</value>
+  <data name="UriValidationShortDescription" xml:space="preserve">
+    <value>#Changes an Entry's text color when an invalid URI is provided.</value>
+  </data>
+  <data name="MultiConverterDescription" xml:space="preserve">
+    <value>#This sample demonstrates how to use the MultiBinding Converter with the NotEqualConverter and the TextCaseConverter. 
+
+It converts the entered text to Upper Case and checks that it is Not Equal to the string 'ANDREI'.</value>
+  </data>
+  <data name="MultiConverterShortDescription" xml:space="preserve">
+    <value>#This sample demonstrates how to use Multibinding Converter</value>
   </data>
    <data name="Settings" xml:space="preserve">
     <value>Ajustes</value>
