Added multi validation behavior

--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -360,6 +360,12 @@
   <data name="UriValidationShortDescription" xml:space="preserve">
     <value>Changes an Entry's text color when an invalid URI is provided.</value>
   </data>
+   <data name="MultiValidationDescription" xml:space="preserve">
+    <value>Text color will change accordingly to the style that is configured if any of child behaviors is invalid (Minimum: -10, Maximum: 5).</value>
+  </data>
+  <data name="MultiValidationShortDescription" xml:space="preserve">
+    <value>Combines multiple validation behavior.</value>
+  </data>
   <data name="MultiConverterDescription" xml:space="preserve">
     <value>This sample demonstrates how to use the MultiBinding Converter with the NotEqualConverter and the TextCaseConverter. 
 
