--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -389,4 +389,22 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
    <data name="Save" xml:space="preserve">
     <value>Guardar</value>
   </data>
+  <data name="CameraViewTitle" xml:space="preserve">
+    <value>CameraView</value>
+  </data>
+  <data name="CameraViewDescription" xml:space="preserve">
+    <value>The CameraView allows you to show a live preview from the camera. You can take pictures, record videos and much more!</value>
+  </data>
+  <data name="CameraViewSampleZoom" xml:space="preserve">
+    <value>Zoom: {0}</value>
+  </data>
+  <data name="CameraViewSampleSnapPicture" xml:space="preserve">
+    <value>Snap Picture</value>
+  </data>
+  <data name="CameraViewSampleStartRecording" xml:space="preserve">
+    <value>Start Recording</value>
+  </data>
+  <data name="CameraViewSampleStopRecording" xml:space="preserve">
+    <value>Stop Recording</value>
+  </data>
 </root>
