Applied changes requested by pull request review feedback

--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -354,13 +354,13 @@
   <data name="Time" xml:space="preserve">
     <value>Time</value>
   </data>
-   <data name="UriValidationDescription" xml:space="preserve">
+  <data name="UriValidationDescription" xml:space="preserve">
     <value>Text color will change accordingly to the style that is configured when a invalid URI is entered.</value>
   </data>
   <data name="UriValidationShortDescription" xml:space="preserve">
     <value>Changes an Entry's text color when an invalid URI is provided.</value>
   </data>
-   <data name="MultiValidationDescription" xml:space="preserve">
+  <data name="MultiValidationDescription" xml:space="preserve">
     <value>Text color will change accordingly to the style that is configured if any of child behaviors is invalid (Minimum: -10, Maximum: 5).</value>
   </data>
   <data name="MultiValidationShortDescription" xml:space="preserve">
@@ -374,16 +374,16 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   <data name="MultiConverterShortDescription" xml:space="preserve">
     <value>This sample demonstrates how to use Multibinding Converter</value>
   </data>
-   <data name="Settings" xml:space="preserve">
+  <data name="Settings" xml:space="preserve">
     <value>Settings</value>
   </data>
-   <data name="ChangeLanguage" xml:space="preserve">
+  <data name="ChangeLanguage" xml:space="preserve">
     <value>Change language</value>
   </data>
-   <data name="English" xml:space="preserve">
+  <data name="English" xml:space="preserve">
     <value>English</value>
   </data>
-   <data name="Spanish" xml:space="preserve">
+  <data name="Spanish" xml:space="preserve">
     <value>Spanish</value>
   </data>
   <data name="Save" xml:space="preserve">
@@ -411,7 +411,7 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
     <value>This behavior waits for the user to stop typing and then executes a Command. The waiting threshold is adjustable, as well as there is an option to dismiss the keyboard after the user has stopped typing.</value>
   </data>
   <data name="UserStoppedTypingBehaviorDismissKeyboardOptionLabel" xml:space="preserve">
-    <value>Auto dismiss keyboard</value>
+    <value>Should dismiss keyboard automatically</value>
   </data>
   <data name="UserStoppedTypingBehaviorSearchBarPlaceholderText" xml:space="preserve">
     <value>Start searching...</value>
@@ -423,6 +423,6 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
     <value>This behavior waits for the user to stop typing and then executes a Command.</value>
   </data>
   <data name="UserStoppedTypingBehaviorThresholdOptionLabel" xml:space="preserve">
-    <value>User stopped typing threshold</value>
+    <value>User stopped typing time threshold (in ms)</value>
   </data>
 </root>
