--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -20,10 +20,10 @@
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>#[base64 mime encoded serialized .NET Framework object]</value>
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
     <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>#[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
                 
@@ -409,6 +409,9 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="DateTimeOffsetConverterShortDescription" xml:space="preserve">
     <value>#A converter that allows to convert from a DateTimeOffset type to a DateTime type.</value>
+  </data>
+  <data name="Snackbar" xml:space="preserve">
+    <value>Snackbar</value>
   </data>
   <data name="ExpanderTitle" xml:space="preserve">
     <value>#Expander</value>
