--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -452,4 +452,7 @@ The user may at their choice decide to have output warnings treated as exception
 
 If the user manually assigns a row or column on a view, it will be honored.</value>
   </data>
+  <data name="Snackbar" xml:space="preserve">
+    <value>Snackbar</value>
+  </data>
 </root>
