--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -452,7 +452,22 @@ The user may at their choice decide to have output warnings treated as exception
 
 If the user manually assigns a row or column on a view, it will be honored.</value>
   </data>
-  <data name="Snackbar" xml:space="preserve">
-    <value>Snackbar</value>
+  <data name="ShowSnackbarWithActionButton" xml:space="preserve">
+    <value>Show snackbar with action button</value>
+  </data>
+  <data name="ActionsPageDescription" xml:space="preserve">
+    <value>Show snackbar, toast etc</value>
+  </data>
+  <data name="ActionsPageTitle" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="ShowSnackbarNoActionButton" xml:space="preserve">
+    <value>Show snackbar (no action button)</value>
+  </data>
+  <data name="SnackbarIsClosedByTimeout" xml:space="preserve">
+    <value>Snackbar is closed by timeout</value>
+  </data>
+  <data name="SnackbarIsClosedByUser" xml:space="preserve">
+    <value>Snackbar is closed by user</value>
   </data>
 </root>
