--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -409,7 +409,7 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="DateTimeOffsetConverterShortDescription" xml:space="preserve">
     <value>A converter that allows to convert from a DateTimeOffset type to a DateTime type.</value>
-  </data> 
+  </data>
   <data name="ExpanderTitle" xml:space="preserve">
     <value>Expander</value>
   </data>
@@ -442,5 +442,8 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="AutoGridLayoutBehaviorDescription" xml:space="preserve">
     <value>This behavior assigns grid row and column based on the order a view is added to the grid.</value>
+  </data>
+  <data name="ImpliedOrderGridDescriptionLabel" xml:space="preserve">
+    <value>View's row and column are determined by the order they are added to the grid's children. RowSpan and ColumnSpan are honored.</value>
   </data>
 </root>
