--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -423,6 +423,12 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
     <value>#Enable nested:</value>
   </data>
   <data name="ImpliedOrderGridDescriptionLabel" xml:space="preserve">
-    <value>#View's row and column are determined by the order they are added to the grid's children. RowSpan and ColumnSpan are honored.</value>
+    <value>#Behavior that auto sets row and column assignments of child views by the order they are defined in the grid. RowSpan and ColumnSpan are honored during the auto-assignment of row and column.
+
+By default, if more cells in the grid are needed by the number of child views then are defined an output warning will be generated. If a row or column span exceeds the defined rows and columns output warnings will be generated.
+
+The user may at their choice decide to have output warnings treated as exceptions.
+
+If the user manually assigns a row or column on a view, it will be honored.</value>
   </data>
 </root>
