--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -360,6 +360,12 @@
   <data name="UriValidationShortDescription" xml:space="preserve">
     <value>Changes an Entry's text color when an invalid URI is provided.</value>
   </data>
+  <data name="MediaElementTitle" xml:space="preserve">
+    <value>MediaElement</value>
+  </data>
+   <data name="MediaElementDescription" xml:space="preserve">
+    <value>MediaElement is a view for playing video and audio.</value>
+  </data>
   <data name="MultiValidationDescription" xml:space="preserve">
     <value>Text color will change accordingly to the style that is configured if any of child behaviors is invalid (Minimum: -10, Maximum: 5).</value>
   </data>
