--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -187,7 +187,7 @@
     <value>#Click Me</value>
   </data>
   <data name="NumericValidationShortDescription" xml:space="preserve">
-   <value>#Changes an Entry's text color when an invalid number is provided.</value>
+    <value>#Changes an Entry's text color when an invalid number is provided.</value>
   </data>
   <data name="NumericValidationBehaviorDescription" xml:space="preserve">
     <value>#Text color will be changed according to the configured style in case of an invalid numeric format or when the numeric value is outside of the configured boundaries (min: 1.0, max: 100.0). Maximum decimal places value equals 2.</value>
@@ -421,5 +421,14 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="EnableNested" xml:space="preserve">
     <value>#Enable nested:</value>
+  </data>
+  <data name="ImpliedOrderGridDescriptionLabel" xml:space="preserve">
+    <value>#Behavior that auto sets row and column assignments of child views by the order they are defined in the grid. RowSpan and ColumnSpan are honored during the auto-assignment of row and column.
+
+By default, if more cells in the grid are needed by the number of child views then are defined an output warning will be generated. If a row or column span exceeds the defined rows and columns output warnings will be generated.
+
+The user may at their choice decide to have output warnings treated as exceptions.
+
+If the user manually assigns a row or column on a view, it will be honored.</value>
   </data>
 </root>
