--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -409,7 +409,7 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="DateTimeOffsetConverterShortDescription" xml:space="preserve">
     <value>A converter that allows to convert from a DateTimeOffset type to a DateTime type.</value>
-  </data> 
+  </data>
   <data name="ExpanderTitle" xml:space="preserve">
     <value>Expander</value>
   </data>
@@ -439,5 +439,17 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="UserStoppedTypingBehaviorThresholdOptionLabel" xml:space="preserve">
     <value>User stopped typing time threshold (in ms)</value>
+  </data>
+  <data name="AutoGridLayoutBehaviorDescription" xml:space="preserve">
+    <value>This behavior assigns grid row and column based on the order a view is added to the grid.</value>
+  </data>
+  <data name="ImpliedOrderGridDescriptionLabel" xml:space="preserve">
+    <value>Behavior that auto sets row and column assignments of child views by the order they are defined in the grid. RowSpan and ColumnSpan are honored during the auto-assignment of row and column.
+
+By default, if more cells in the grid are needed by the number of child views then are defined an output warning will be generated. If a row or column span exceeds the defined rows and columns output warnings will be generated.
+
+The user may at their choice decide to have output warnings treated as exceptions.
+
+If the user manually assigns a row or column on a view, it will be honored.</value>
   </data>
 </root>
