--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -20,10 +20,10 @@
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
     <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>#[base64 mime encoded serialized .NET Framework object]</value>
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
     <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>#[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
                 
@@ -410,6 +410,9 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   <data name="DateTimeOffsetConverterShortDescription" xml:space="preserve">
     <value>#A converter that allows to convert from a DateTimeOffset type to a DateTime type.</value>
   </data>
+  <data name="Snackbar" xml:space="preserve">
+    <value>Snackbar</value>
+  </data>
   <data name="ExpanderTitle" xml:space="preserve">
     <value>#Expander</value>
   </data>
@@ -421,6 +424,24 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   </data>
   <data name="EnableNested" xml:space="preserve">
     <value>#Enable nested:</value>
+  </data>
+  <data name="ActionsPageDescription" xml:space="preserve">
+    <value>Show snackbar, toast etc</value>
+  </data>
+  <data name="ActionsPageTitle" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="SnackbarIsClosedByTimeout" xml:space="preserve">
+    <value>Snackbar is closed by timeout</value>
+  </data>
+  <data name="SnackbarIsClosedByUser" xml:space="preserve">
+    <value>Snackbar is closed by user</value>
+  </data>
+  <data name="ShowSnackbarNoActionButton" xml:space="preserve">
+    <value>Show snackbar (no action button)</value>
+  </data>
+  <data name="ShowSnackbarWithActionButton" xml:space="preserve">
+    <value>Show snackbar with action button</value>
   </data>
   <data name="ImpliedOrderGridDescriptionLabel" xml:space="preserve">
     <value>#Behavior that auto sets row and column assignments of child views by the order they are defined in the grid. RowSpan and ColumnSpan are honored during the auto-assignment of row and column.
