--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -452,4 +452,25 @@ The user may at their choice decide to have output warnings treated as exception
 
 If the user manually assigns a row or column on a view, it will be honored.</value>
   </data>
+  <data name="DefaultGravatar" xml:space="preserve">
+    <value>#Default Gravatar</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>#Email</value>
+  </data>
+  <data name="FullImageSource" xml:space="preserve">
+    <value>#Full Image Source</value>
+  </data>
+  <data name="GravatarImageSourceDescription" xml:space="preserve">
+    <value>GravatarImageSource le permite utilizar fácilmente la imagen de Gravatar de un usuario de Gravatar.com usando nada más que su dirección de correo electrónico.</value>
+  </data>
+  <data name="GravatarImageSourceTitle" xml:space="preserve">
+    <value>#GravatarImageSource</value>
+  </data>
+  <data name="GravatarSize" xml:space="preserve">
+    <value>#GravatarSize</value>
+  </data>
+  <data name="XAMLExtension" xml:space="preserve">
+    <value>#XAML Extension</value>
+  </data>
 </root>
