removed button click and made use of viewmodel and command binding to ContentButton, including a click counter

--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -480,9 +480,9 @@ If the user manually assigns a row or column on a view, it will be honored.</val
     <value>ContentButton allows you to add content view to a button</value>
   </data>
   <data name="ContentButtonTapDescription" xml:space="preserve">
-    <value>Tap here to see the snackbar</value>
+    <value>Tap here</value>
   </data>
   <data name="ContentButtonTapMessage" xml:space="preserve">
-    <value>You have clicked the ContentButton</value>
+    <value> ContentButton clicks</value>
   </data>
 </root>
