--- a/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.es.resx
@@ -425,9 +425,6 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
   <data name="DateTimeOffsetConverterShortDescription" xml:space="preserve">
     <value>#A converter that allows to convert from a DateTimeOffset type to a DateTime type.</value>
   </data>
-  <data name="Snackbar" xml:space="preserve">
-    <value>Snackbar</value>
-  </data>
   <data name="ExpanderTitle" xml:space="preserve">
     <value>#Expander</value>
   </data>
@@ -441,22 +438,22 @@ It converts the entered text to Upper Case and checks that it is Not Equal to th
     <value>#Enable nested:</value>
   </data>
   <data name="ActionsPageDescription" xml:space="preserve">
-    <value>Show snackbar, toast etc</value>
+    <value>Show SnackBar, toast etc</value>
   </data>
   <data name="ActionsPageTitle" xml:space="preserve">
     <value>Actions</value>
   </data>
-  <data name="SnackbarIsClosedByTimeout" xml:space="preserve">
-    <value>Snackbar is closed by timeout</value>
+  <data name="SnackBarIsClosedByTimeout" xml:space="preserve">
+    <value>SnackBar is closed by timeout</value>
   </data>
-  <data name="SnackbarIsClosedByUser" xml:space="preserve">
-    <value>Snackbar is closed by user</value>
+  <data name="SnackBarIsClosedByUser" xml:space="preserve">
+    <value>SnackBar is closed by user</value>
   </data>
-  <data name="ShowSnackbarNoActionButton" xml:space="preserve">
-    <value>Show snackbar (no action button)</value>
+  <data name="ShowSnackBarNoActionButton" xml:space="preserve">
+    <value>Show toast</value>
   </data>
-  <data name="ShowSnackbarWithActionButton" xml:space="preserve">
-    <value>Show snackbar with action button</value>
+  <data name="ShowSnackBarWithActionButton" xml:space="preserve">
+    <value>Show SnackBar</value>
   </data>
   <data name="ImpliedOrderGridDescriptionLabel" xml:space="preserve">
     <value>#Behavior that auto sets row and column assignments of child views by the order they are defined in the grid. RowSpan and ColumnSpan are honored during the auto-assignment of row and column.
