--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -518,7 +518,16 @@ If the user manually assigns a row or column on a view, it will be honored.</val
   <data name="BoolToObjectConverterShortDescription" xml:space="preserve">
     <value>The BoolToObjectConverter is a converter that allows users to convert a bool value binding to a specific object.</value>
   </data>
-    <data name="BoolToObjectConverterLongDescription" xml:space="preserve">
+  <data name="BoolToObjectConverterLongDescription" xml:space="preserve">
     <value>The BoolToObjectConverter is a converter that allows users to convert a bool value binding to a specific object. By providing both a TrueObject and a FalseObject in the converter the appropriate object will be used depending on the value of the binding.</value>
+  </data>
+  <data name="DoubleToIntConverterShortDescription" xml:space="preserve">
+    <value>The DoubleToIntConverter is a converter that allows users to convert an incoming double value to an int.</value>
+  </data>
+  <data name="DoubleToIntConverterLongDescription" xml:space="preserve">
+    <value>The DoubleToIntConverter is a converter that allows users to convert an incoming double value to an int. Optionally the user can provide a multiplier to the conversion through the Ratio property.</value>
+  </data>
+    <data name="TextEntryPromt" xml:space="preserve">
+    <value>Please enter a decimal Number</value>
   </data>
 </root>
