Added EqualConverter Sample

--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -527,7 +527,16 @@ If the user manually assigns a row or column on a view, it will be honored.</val
   <data name="DoubleToIntConverterLongDescription" xml:space="preserve">
     <value>The DoubleToIntConverter is a converter that allows users to convert an incoming double value to an int. Optionally the user can provide a multiplier to the conversion through the Ratio property.</value>
   </data>
-    <data name="TextEntryPromt" xml:space="preserve">
+  <data name="TextEntryPromt" xml:space="preserve">
     <value>Please enter a decimal Number</value>
+  </data>
+  <data name="EqualConverterShortDescription" xml:space="preserve">
+    <value>The EqualConverter is a converter that allows users to convert any value binding to a bool depending on whether or not it is equal to a different value. </value>
+  </data>
+  <data name="EqualConverterLongDescription" xml:space="preserve">
+    <value>The EqualConverter is a converter that allows users to convert any value binding to a bool depending on whether or not it is equal to a different value. The initial binding contains the object that will be compared and the ConverterParameter contains the object to compare it to.</value>
+  </data>
+    <data name="EqualPromtText" xml:space="preserve">
+    <value>Please enter 100 for true anyting else for false</value>
   </data>
 </root>
