Fixed merge issue

--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -325,12 +325,6 @@
     <value>SideMenuView</value>
   </data>
   <data name="SideMenuViewDescription" xml:space="preserve">
-    <value>Shield is a type of badge.</value>
-  </data>
-  <data name="ShieldTitle" xml:space="preserve">
-    <value>Shield</value>
-  </data>
-  <data name="ShieldDescription" xml:space="preserve">
     <value>SideMenuView is a simple and flexible Right/Left menu control.</value>
   </data>
   <data name="MaskedDescription" xml:space="preserve">
@@ -481,6 +475,12 @@ If the user manually assigns a row or column on a view, it will be honored.</val
   </data>
   <data name="ShowSnackBarWithActionButton" xml:space="preserve">
     <value>Show SnackBar</value>
+  </data>
+  <data name="ShieldTitle" xml:space="preserve">
+    <value>Shield</value>
+  </data>
+  <data name="ShieldDescription" xml:space="preserve">
+    <value>SideMenuView is a simple and flexible Right/Left menu control.</value>
   </data>
   <data name="ActionsPageDescription" xml:space="preserve">
     <value>Show SnackBar, toast etc</value>
