--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -476,6 +476,12 @@ If the user manually assigns a row or column on a view, it will be honored.</val
   <data name="ShowSnackBarWithActionButton" xml:space="preserve">
     <value>Show SnackBar</value>
   </data>
+  <data name="ShieldTitle" xml:space="preserve">
+    <value>Shield</value>
+  </data>
+  <data name="ShieldDescription" xml:space="preserve">
+    <value>Shields can show some status information or call-to-action in a badge-like way.</value>
+  </data>
   <data name="ActionsPageDescription" xml:space="preserve">
     <value>Show SnackBar, toast etc</value>
   </data>
