--- a/XamarinCommunityToolkitSample/Resx/AppResources.resx
+++ b/XamarinCommunityToolkitSample/Resx/AppResources.resx
@@ -233,6 +233,12 @@
   </data>
   <data name="AvatarViewSizeText" xml:space="preserve">
     <value>Size Property:</value>
+  </data>  
+  <data name="BadgeViewTitle" xml:space="preserve">
+    <value>BadgeView</value>
+  </data>
+  <data name="BadgeViewDescription" xml:space="preserve">
+    <value>View used to used to notify users notifications, or status of something.</value>
   </data>
   <data name="RangeSliderTitle" xml:space="preserve">
     <value>RangeSlider</value>
